# magnetai

./: .gitignore
docker/: README.md  build.sh  build_bin.sh  build_env.sh
docker/ai/: Dockerfile  run.sh
docker/ai-env/: Dockerfile
node/: Cargo.toml
node/res/: mainnet.json
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ai/: Cargo.toml
pallets/ai/src/: lib.rs  weights.rs
pallets/market/: Cargo.toml
pallets/market/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
